Fix UI layout clipping

--- a/public/style.css
+++ b/public/style.css
@@ -168,6 +168,8 @@ h2#overlayText {
 
 input[type="text"], select {
     flex-grow: 1;
+    width: 100%;
+    box-sizing: border-box;
     padding: 10px 15px;
     border: 2px solid #ccc;
     border-radius: 20px;
